# rdml

./: .gitignore  .pre-commit-config.yaml  .sassrc  .sassrc.js  Makefile  README.md  REUSE.toml  env.template  manage.py  package-lock.json  package.json  pyproject.toml  requirements-dev.txt  requirements.in  requirements.txt
assets/js/: app.js
assets/scss/: _bootstrap_custom.scss  _style.scss  app.scss  django_admin.scss
docs/: Makefile  about.md  conf.py  faq.md  index.md  onboarding.md  rdml-public-detail.png.license
rdml/: admin.py  apps.py  asgi.py  urls.py  wsgi.py
rdml/accounts/: admin.py  apps.py  forms.py  models.py  urls.py
rdml/accounts/migrations/: 0001_initial.py  0002_group.py  0003_alter_customuser_options.py
rdml/classification/: abstracts.py  admin.py  apps.py  models.py
rdml/classification/migrations/: 0001_initial.py  0002_filetype_unique_lower_extension_software.py
rdml/core/: apps.py  decorators.py  helpers.py  messages.py  middleware.py  models.py
rdml/dashboard/: apps.py  urls.py  views.py
rdml/doimanager/: admin.py  apps.py  context_processors.py  metadata.py  models.py  urls.py  utils.py  views.py
rdml/doimanager/datacite/: errors.py  request.py  rest_client.py
rdml/doimanager/migrations/: 0001_initial.py  0002_alter_dataciteconfiguration_options.py  0003_alter_dataciteresource_options.py  (+2 more)
rdml/doiresolver/: admin.py  apps.py  models.py  urls.py  views.py
rdml/organization/: admin.py  apps.py  context_processors.py  countries.py  models.py
rdml/research/: admin.py  apps.py  forms.py
rdml/settings/: __init__.py  base.py  ldap.py
rdml/templates/: 403.html  _base.html  _partial.html
(+44 files in other folders)
