# SPDX-FileCopyrightText: 2025 Thomas Breitner
#
# SPDX-License-Identifier: CC0-1.0

[project]
name = "rdml"
version = "0.1.0"
description = "Web based research metadata managment tool & DOI manager & DOI landing pages generator"
authors = [{name = "Thomas Breitner", email = "t.breitner@csl.mpg.de"},]
license = {file = "LICENSE"}
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Framework :: Django",
    "License :: OSI Approved :: European Union Public Licence 1.2 (EUPL 1.2)",
    "Programming Language :: Python :: 3",
]
dependencies = [
    "django==5.2.1",
    "django-environ",
    "django-crispy-forms",
    "crispy-bootstrap5",
    "django-auth-ldap",
    "django-auditlog",
    "django-htmx",
    "whitenoise",
    "requests",
    "pygments",
    "Sphinx",
    "sphinx-book-theme",
    "myst_parser",  # currently not working: myst_parser[linkify]
    "sphinx-design",
]

[project.optional-dependencies]
dev = [
    "reuse",
    "pre-commit",
    "ruff",
    "pip-tools",
    "django-debug-toolbar",
]
test = [
    "pytest",
    "pytest-django",
]

[tool.setuptools]
py-modules = []
package-dir = {}

[project.urls]
Homepage = "https://gitlab.gwdg.de/t.breitner/rdml"
Documentation = "https://gitlab.gwdg.de/t.breitner/rdml/-/blob/main/README.md"
Repository = "https://gitlab.gwdg.de/t.breitner/rdml"
Issues = "https://gitlab.gwdg.de/t.breitner/rdml/-/issues"

[tool.ruff]
line-length = 120
target-version = "py311"
extend-exclude = ["migrations"]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "rdml.settings"
